Bug 874252 - Leak with expando on a DOMError, r=khuey